feat: added the method SaveBlock and her implementation
