# lnrpc/protos/replicator/replicator.swagger.json
@@ -12,20 +12,92 @@
   ],
   "paths": {},
   "definitions": {
+    "justificationsLockTimeOver": {
+      "type": "object",
+      "properties": {
+        "proof_elapsed": {
+          "type": "string",
+          "title": "proof_elapsed — PKT block hash confirming expiration lock"
+        },
+        "lock": {
+          "type": "string",
+          "title": "lock_id — hash with information abiut lock justification"
+        }
+      },
+      "title": "LockTimeOver timeout for token locking"
+    },
+    "justificationsLockToken": {
+      "type": "object",
+      "properties": {
+        "lock": {
+          "$ref": "#/definitions/lockLock",
+          "title": "lock — information about lock"
+        }
+      },
+      "title": "LockToken the token locking"
+    },
+    "justificationsTranferToken": {
+      "type": "object",
+      "properties": {
+        "htlc_secret_hash": {
+          "type": "string",
+          "title": "htlc_secret_hash — htlc genereted issuer"
+        },
+        "lock": {
+          "type": "string",
+          "title": "lock — hash information about lock"
+        }
+      },
+      "title": "TranferToken receiving funds for tokens and unlcok them"
+    },
+    "lockLock": {
+      "type": "object",
+      "properties": {
+        "count": {
+          "type": "string",
+          "format": "int64",
+          "title": "count — number of sending tokens"
+        },
+        "recipient": {
+          "type": "string",
+          "title": "recipient — wallet addres of new owner of tokens"
+        },
+        "sender": {
+          "type": "string",
+          "title": "sender — owner of the wallet address to which tokens will be returned"
+        },
+        "htlc": {
+          "type": "string",
+          "title": "htlc — hash of contract"
+        },
+        "proof_count": {
+          "type": "integer",
+          "format": "int32",
+          "title": "proof_count — lock expiration time in PKT blocks"
+        },
+        "creation_height": {
+          "type": "string",
+          "format": "uint64",
+          "title": "creation_height — creation height in token blockchain"
+        },
+        "signature": {
+          "type": "string",
+          "title": "signature generated with old owner private key"
+        }
+      },
+      "title": "Lock contain information about tokens and contract for transferring"
+    },
     "protobufAny": {
       "type": "object",
       "properties": {
         "type_url": {
-          "type": "string",
-          "description": "A URL/resource name that uniquely identifies the type of the serialized\nprotocol buffer message. The last segment of the URL's path must represent\nthe fully qualified name of the type (as in\n`path/google.protobuf.Duration`). The name should be in a canonical form\n(e.g., leading \".\" is not accepted).\n\nIn practice, teams usually precompile into the binary all types that they\nexpect it to use in the context of Any. However, for URLs which use the\nscheme `http`, `https`, or no scheme, one can optionally set up a type\nserver that maps type URLs to message definitions as follows:\n\n* If no scheme is provided, `https` is assumed.\n* An HTTP GET on the URL must yield a [google.protobuf.Type][]\n  value in binary format, or produce an error.\n* Applications are allowed to cache lookup results based on the\n  URL, or have them precompiled into a binary to avoid any\n  lookup. Therefore, binary compatibility needs to be preserved\n  on changes to types. (Use versioned type names to manage\n  breaking changes.)\n\nNote: this functionality is not currently available in the official\nprotobuf release, and it is not used for type URLs beginning with\ntype.googleapis.com.\n\nSchemes other than `http`, `https` (or the empty scheme) might be\nused with implementation specific semantics."
+          "type": "string"
         },
         "value": {
           "type": "string",
-          "format": "byte",
-          "description": "Must be a valid serialized protocol buffer of the above specified type."
+          "format": "byte"
         }
-      },
-      "description": "`Any` contains an arbitrary serialized protocol buffer message along with a\nURL that describes the type of the serialized message.\n\nProtobuf library provides support to pack/unpack Any values in the form\nof utility functions or additional generated methods of the Any type.\n\nExample 1: Pack and unpack a message in C++.\n\n    Foo foo = ...;\n    Any any;\n    any.PackFrom(foo);\n    ...\n    if (any.UnpackTo(\u0026foo)) {\n      ...\n    }\n\nExample 2: Pack and unpack a message in Java.\n\n    Foo foo = ...;\n    Any any = Any.pack(foo);\n    ...\n    if (any.is(Foo.class)) {\n      foo = any.unpack(Foo.class);\n    }\n\n Example 3: Pack and unpack a message in Python.\n\n    foo = Foo(...)\n    any = Any()\n    any.Pack(foo)\n    ...\n    if any.Is(Foo.DESCRIPTOR):\n      any.Unpack(foo)\n      ...\n\n Example 4: Pack and unpack a message in Go\n\n     foo := \u0026pb.Foo{...}\n     any, err := ptypes.MarshalAny(foo)\n     ...\n     foo := \u0026pb.Foo{}\n     if err := ptypes.UnmarshalAny(any, foo); err != nil {\n       ...\n     }\n\nThe pack methods provided by protobuf library will by default use\n'type.googleapis.com/full.type.name' as the type URL and the unpack\nmethods only use the fully qualified type name after the last '/'\nin the type URL, for example \"foo.bar.com/x/y.z\" will yield type\nname \"y.z\".\n\n\nJSON\n====\nThe JSON representation of an `Any` value uses the regular\nrepresentation of the deserialized, embedded message, with an\nadditional field `@type` which contains the type URL. Example:\n\n    package google.profile;\n    message Person {\n      string first_name = 1;\n      string last_name = 2;\n    }\n\n    {\n      \"@type\": \"type.googleapis.com/google.profile.Person\",\n      \"firstName\": \u003cstring\u003e,\n      \"lastName\": \u003cstring\u003e\n    }\n\nIf the embedded message type is well-known and has a custom JSON\nrepresentation, that representation will be embedded adding a field\n`value` which holds the custom JSON in addition to the `@type`\nfield. Example (for message [google.protobuf.Duration][]):\n\n    {\n      \"@type\": \"type.googleapis.com/google.protobuf.Duration\",\n      \"value\": \"1.212s\"\n    }"
+      }
     },
     "replicatorGetTokenBalancesResponse": {
       "type": "object",
@@ -72,6 +144,14 @@
         "total": {
           "type": "string",
           "format": "uint64"
+        }
+      }
+    },
+    "replicatorGetTokenResponse": {
+      "type": "object",
+      "properties": {
+        "tokens": {
+          "$ref": "#/definitions/replicatorToken"
         }
       }
     },
@@ -193,6 +273,55 @@
         }
       }
     },
+    "tokendbBlock": {
+      "type": "object",
+      "properties": {
+        "prev_block": {
+          "type": "string",
+          "title": "prev_block — hash of previous block"
+        },
+        "lock": {
+          "$ref": "#/definitions/justificationsLockToken",
+          "title": "lock — payload with lock"
+        },
+        "transfer": {
+          "$ref": "#/definitions/justificationsTranferToken",
+          "title": "transfer — payload with transaction info"
+        },
+        "lock_over": {
+          "$ref": "#/definitions/justificationsLockTimeOver",
+          "title": "lock_over — payload with lock time over"
+        },
+        "creation": {
+          "type": "string",
+          "format": "int64",
+          "title": "creation — date of block creation in unix time format"
+        },
+        "state": {
+          "type": "string",
+          "title": "state — hash of state structure containing locks, owners and meta token \ninfo"
+        },
+        "pkt_block_hash": {
+          "type": "string",
+          "title": "pkt_block_hash —  the hash of the most recent PKT block"
+        },
+        "pkt_block_height": {
+          "type": "integer",
+          "format": "int32",
+          "title": "pkt_block_height — the height of the most recent PKT block"
+        },
+        "height": {
+          "type": "string",
+          "format": "uint64",
+          "title": "height — the current height of this TokenStrike chain"
+        },
+        "signature": {
+          "type": "string",
+          "title": "signature — issuer ID, needed for validate. If signature incorrect block\nis not valid"
+        }
+      },
+      "title": "Block is struct of block in blockchain"
+    },
     "tokendbToken": {
       "type": "object",
       "properties": {
@@ -214,6 +343,10 @@
         "url": {
           "type": "string",
           "title": "urls — set of urls for access to blockchain"
+        },
+        "issuer_pubkey": {
+          "type": "string",
+          "title": "issuer_pubkey — public key of issuer used for signing"
         }
       },
       "title": "Token contain information about token"
